--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/profilecart"
         android:layout_margin="10dp"
+
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatImageView
@@ -29,9 +30,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="140dp"
             android:textSize="20dp"
+            android:id="@+id/tvName"
             android:layout_marginTop="30dp"
             android:textColor="@color/profileFragmentText"
-            android:text="@string/name"/>
+            android:text="@string/rahul"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvUserEmail"
@@ -39,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="140dp"
             android:layout_marginTop="60dp"
-            android:text="@string/email"
+            android:text="rahul@mail.com"
             android:textColor="@color/profileFragmentText" />
 
     </com.google.android.material.card.MaterialCardView>
