--- a/app/src/main/res/layout/fragment_see_all.xml
+++ b/app/src/main/res/layout/fragment_see_all.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.SeeAllProductFragment">
 
@@ -33,5 +34,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/hLine"/>
-
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:id="@+id/shimmerEffect"
+        app:layout_constraintTop_toBottomOf="@+id/tvtitle"
+        android:layout_height="wrap_content">
+        <include layout="@layout/fragment_home_shimmer"/>
+    </com.facebook.shimmer.ShimmerFrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
