--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -85,14 +85,12 @@
                 android:id="@+id/product_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/shimmer_Loading"
                 android:textSize="19sp" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/product_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/men_s_clothing"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
@@ -112,7 +110,7 @@
                     android:id="@+id/productRate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/shimmer_Loading"
+                    android:text="@string/_3_9"
                     android:textSize="19sp" />
             </LinearLayout>
 
@@ -129,10 +127,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
-                android:text="@string/product_description"
                 android:textSize="16sp" />
-
-
         </LinearLayout>
 
     </ScrollView>
@@ -155,6 +150,7 @@
     <com.facebook.shimmer.ShimmerFrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:id="@+id/shimmerEffect">
         <include layout="@layout/fragment_product_detail_shimmer" />
     </com.facebook.shimmer.ShimmerFrameLayout>
